@@ -1594,11 +1594,13 @@ knocking them unconscious for a short amount of time.  Like a \
 back-stab, the thief must not be visible to the target for this \
 to work.
 
-SCRATCH=<ABILITY>\
+SCRATCH=THIEF_SCRATCH
+THIEF_SCRATCH=<ABILITY>\
 Usage    : SCRATCH [TARGET NAME] \n\r\
 Example  : scratch orc\n\r\
-The fighter uses his or her fingertips to cafully deliver very \
-minor damage to the target.
+The thief descretely uses his or her fingertips to cafully deliver very \
+minor damage to the target. If done carefully, the target won't know what \
+happened.
 
 SKILL_SCROLLCOPY=SCROLL_COPY
 MEMORIZE=SCROLL_COPY
